--- a/TextExam2/Windows/EditProductWindow.xaml
+++ b/TextExam2/Windows/EditProductWindow.xaml
@@ -22,9 +22,12 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="1">
                 <Image 
+                x:Name="PhotoMaterial"
                 VerticalAlignment="Top"
                 Source="\Images\Product\Nullabe.png"
                 Margin="7"
+                Height="180"
+                Width="240"
                 />
 
                 <TextBlock x:Name="PachImage" Margin="5" Height="25"/>
@@ -33,7 +36,7 @@
                     Height="25"
                     Style="{StaticResource Lololo}"
                     Content="Выбрать"
-                    Margin="5"
+                    Margin="5" Click="Button_Click_2"
                         />
             </StackPanel>
 
